E:39441 [!] Table head checkboxes were not correctly aligned in some places (LC admin). Fixed; Logic improvements of the row cells selection functionality.

--- a/src/skins/admin/en/css/style.css
+++ b/src/skins/admin/en/css/style.css
@@ -342,8 +342,20 @@ div.noscript
   width: 170px;
 }
 
-input.input-disabled {
+input.input-disabled
+{
   color: #8f8f8f;
+}
+
+.center
+{
+  text-align: center;
+}
+
+.middle
+{
+  vertical-align: middle;
+  height: 100%;
 }
 
 /* Page tabs */
@@ -414,6 +426,11 @@ table.data-table th
 {
   background-color: #e5ebef;
   text-align: left;
+}
+
+table.data-table th.center
+{
+  text-align: center;
 }
 
 table.data-table td a
